[project]
name = "nonebot-plugin-longtu"
dynamic = ["version"]
description = "随机发送攻击性极强的龙图"
authors = [{ name = "Perseus037", email = "1209228678@qq.com" }]
dependencies = [
    "nonebot2>=2.1.1",
    "nonebot-adapter-onebot>=2.3.1",
    "httpx>=0.21.1",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }
keywords = ["longyutao", "longtu","nonebot", "nonebot2", "bot", "qq"]
classifiers = [
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]

[project.urls]
homepage = "https://github.com/Perseus037/nonebot_plugin_longtu/"

[project.optional-dependencies]
menu = ["nonebot-plugin-PicMenu>=0.2"]

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_longtu/__init__.py"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
